# bim-pro

./: .gitignore  Makefile  QUICK_START.md  README.md  README_IMPORTANTE.md  build-full.sh  docker-compose.demo.yml  docker-compose.yml  fix-viewer.sh  start.sh  update.sh
cpp-geometry-server/: CMakeLists.txt
cpp-geometry-server/include/: geometry_server.h  ifc_processor.h  lod_generator.h  mesh_optimizer.h  spatial_index.h  tile_generator.h
cpp-geometry-server/proto/: geometry.proto
cpp-geometry-server/src/: geometry_server.cpp  ifc_processor.cpp  lod_generator.cpp  main.cpp
docker/: Dockerfile.geometry-server
fastapi-bridge/: Dockerfile  requirements.txt
fastapi-bridge/app/: main.py
webgl-viewer/: gl-matrix-min.js  index.html
webgl-viewer/shaders/: shaders.js
webgl-viewer/src/: camera.js  model_loader.js  renderer.js  scene.js  shader_manager.js  viewer.js
